--- a/smhrd/src/assets/PatientView.css
+++ b/smhrd/src/assets/PatientView.css
@@ -1,44 +1,46 @@
 @charset "utf-8";
 
-*{font-family: 'Noto Sans KR', sans-serif;}
-#fulltable{
+* {
+  font-family: 'Noto Sans KR', sans-serif;
+}
+#fulltable {
   width: 100%;
   height: 100%;
-  border-collapse : collapse;
+  border-collapse: collapse;
   margin: 0;
   text-align: center;
   border: 1px solid #ced6e0;
 }
-#fulltable tr td{
+#fulltable tr td {
   width: 50%;
   border-bottom: 1px solid #ced6e0;
 }
-#fulltable thead{
+#fulltable thead {
   text-align: center;
 }
-#table-wrap{
+#table-wrap {
   width: 30%;
   height: 100%;
   display: inline-block;
   float: left;
   margin: 30px 20px 0px 20px;
 }
-thead tr{
+thead tr {
   height: 50px;
 }
- #wrap {
+#wrap {
   width: 100%;
   height: 100vh;
 }
-#table{
+#table {
   width: 100%;
   height: 25%;
 }
-#under{
+#under {
   width: 100%;
   height: 40%;
 }
-#score{
+#score {
   height: 100%;
   width: 20%;
   text-align: center;
@@ -46,59 +48,68 @@ thead tr{
   float: left;
   margin: 30px 0px 0px 80px;
   border-radius: 15%;
-  box-shadow: 0px 2px 9px 5px #CFCFCF;
+  box-shadow: 0px 2px 9px 5px #cfcfcf;
 }
-#real-score{
-    display: inline-block;
-    height: 50%;
-    width: 100%;
-    font-size: 100px;
-    padding-top: 10px;
+#real-score {
+  display: inline-block;
+  height: 50%;
+  width: 100%;
+  font-size: 100px;
+  padding-top: 10px;
 }
-#scoreup{
-    display: inline-block;
-    height: 50%;
-    width: 100%;
-    font-size: 40px;
-    padding-top: 30px;
+#scoreup {
+  display: inline-block;
+  height: 50%;
+  width: 100%;
+  font-size: 40px;
+  padding-top: 30px;
 }
-#graph{
+#graph {
   float: right;
   width: 40%;
   height: 100%;
   margin-top: 30px;
 }
-#smalltable{
+#smalltable {
   width: 50%;
   height: 100%;
   text-align: center;
 }
-canvas{
+canvas {
   margin: 0 auto;
   height: 100%;
   width: 100%;
 }
-a{
+a {
   text-decoration: none;
   color: black;
 }
-a:visited { text-decoration: none;
-color: black; }
-a:hover { text-decoration: none;
+a:visited {
+  text-decoration: none;
   color: black;
-cursor: pointer; }
-a:focus { text-decoration: none;
-  color: black; }
-a:hover, a:active { text-decoration: none;
-  color: black; }
+}
+a:hover {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+a:focus {
+  text-decoration: none;
+  color: black;
+}
+a:hover,
+a:active {
+  text-decoration: none;
+  color: black;
+}
 
-  #right{
+#right {
   height: 15%;
   width: 100%;
   text-align: right;
   padding-top: 20px;
 }
-#addmore{
+#addmore {
   margin-right: 10px;
   padding: 5px 10px 5px 10px;
   border-radius: 5px;
@@ -108,15 +119,16 @@ a:hover, a:active { text-decoration: none;
   cursor: pointer;
   box-shadow: 1px 1px 2px;
 }
-#addmore:active{
+#addmore:active {
   box-shadow: none;
 }
-#src-date{
+#src-date {
   padding: 5px 10px 5px 10px;
   border: 2px solid #ced6e0;
   border-radius: 5px;
+  width: 150px;
 }
-#submit{
+#submit {
   margin-left: 10px;
   padding: 5px 10px 5px 10px;
   border-radius: 5px;
@@ -126,37 +138,37 @@ a:hover, a:active { text-decoration: none;
   cursor: pointer;
   box-shadow: 1px 1px 2px;
 }
-#submit:active{
+#submit:active {
   box-shadow: none;
 }
 
-#tablewrap{
+#tablewrap {
   display: inline-block;
   width: 80%;
   height: 100%;
 }
-#body{
+#body {
   width: 100%;
   height: 60%;
 }
-#leftarrow{
-width: 10%;
-display: inline-block;
-text-align: center;
-height: 100%;
-}
-#rightarrow{
+#leftarrow {
   width: 10%;
-display: inline-block;
-text-align: center;
-height: 100%;
+  display: inline-block;
+  text-align: center;
+  height: 100%;
 }
-.date-btn{
+#rightarrow {
+  width: 10%;
+  display: inline-block;
+  text-align: center;
+  height: 100%;
+}
+.date-btn {
   background-color: transparent;
   border: none;
   cursor: pointer;
 }
-#rerun-btn{
+#rerun-btn {
   margin-right: 10px;
   padding: 5px 10px 5px 10px;
   border-radius: 5px;
