--- a/smhrd/src/assets/DetectedView.css
+++ b/smhrd/src/assets/DetectedView.css
@@ -195,3 +195,14 @@ a:hover, a:active { text-decoration: none;
 #page-btn:active{
   box-shadow: none;
 }
+
+input:invalid {
+  border: 1px solid green;
+  transition: all 0.3s ease-out;
+}
+
+input:valid {
+  border: 1px solid red;
+  transition: all 0.3s ease-out;
+  
+}
