--- a/smhrd/src/assets/App.css
+++ b/smhrd/src/assets/App.css
@@ -3,6 +3,8 @@
 *{font-family: 'Noto Sans KR', sans-serif;}
 template{
   overflow-x: hidden;
+  overflow: scroll;
+  min-width: 2000px;
 }
 #header{
   width: 100%;
