--- a/smhrd/src/assets/PatientView.css
+++ b/smhrd/src/assets/PatientView.css
@@ -54,14 +54,14 @@ thead tr {
   display: inline-block;
   height: 50%;
   width: 100%;
-  font-size: 100px;
+  font-size: 6rem;
   padding-top: 10px;
 }
 #scoreup {
   display: inline-block;
   height: 50%;
   width: 100%;
-  font-size: 40px;
+  font-size: 3.2rem;
   padding-top: 30px;
 }
 #graph {
