--- a/smhrd/src/assets/PatientView.css
+++ b/smhrd/src/assets/PatientView.css
@@ -54,14 +54,14 @@ thead tr {
   display: inline-block;
   height: 50%;
   width: 100%;
-  font-size: 6rem;
+  font-size:5vw;
   padding-top: 10px;
 }
 #scoreup {
   display: inline-block;
   height: 50%;
   width: 100%;
-  font-size: 2.8rem;
+  font-size: 2vw;
   padding-top: 30px;
 }
 #graph {
