--- a/smhrd/src/assets/DetectedView.css
+++ b/smhrd/src/assets/DetectedView.css
@@ -22,19 +22,15 @@
 }
 .btn{
   border: none;
-  background-color: #ced6e0;
+  background-color: #6c757D;
   font-weight: bold;
-  color: #333;
+  color: white;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 20px;
   padding-left: 20px;
   border-radius: 5%;
   cursor: pointer;
-  box-shadow: 1px 1px 2px;
-}
-.btn:active{
-  box-shadow: none;
 }
 table{
   width: 100%;
@@ -60,20 +56,15 @@ tbody tr{
 
 #addbtn{
   border: none;
-  background-color: #ced6e0;
+  background-color: #6c757D;
   font-weight: bold;
-  color: #333;
+  color: white;
   cursor: pointer;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-right: 10px;
   padding-left: 10px;
   border-radius: 5%;
-  box-shadow: 1px 1px 2px;
-}
-
-#addbtn:active{
-  box-shadow: none;
 }
 
 input{
@@ -180,22 +171,16 @@ a:hover, a:active { text-decoration: none;
 #page-btn{
   margin-top: 15px;
   border: none;
-  background-color: #ced6e0;
+  background-color: #6c757D;
   font-weight: bold;
-  color: #333;
+  color: white;
   cursor: pointer;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-right: 10px;
   padding-left: 10px;
   border-radius: 5%;
-  box-shadow: 1px 1px 2px;
 }
-
-#page-btn:active{
-  box-shadow: none;
-}
-
 input:invalid {
   border: 1px solid green;
   transition: all 0.3s ease-out;
@@ -204,5 +189,5 @@ input:invalid {
 input:valid {
   border: 1px solid red;
   transition: all 0.3s ease-out;
-  
+
 }
